--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive"] }
+sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
+tokio = { version = "1.39.3", features = ["full", "tokio-macros"] }
+tokio-macros = "2.4.0"
